--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
-    <header>
-        <h1>Horoscope</h1>
-    </header>
-    <div id="container">
-        <input id="datePicker" type="date" value="2020-02-12">
-    </div>
-
+    <div id="wrapper">
+        <header>
+            <h1>Horoscope</h1>
+        </header>
+        <div id="container">
+            <input id="datePicker" type="date" value="2020-02-12">
+        </div>
+        <div id="responseDiv">Choose your sign</div>
+    </div>  
 
 </body>
 </html>
