--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Horoscope</h1>
+            <h1>My Horoscope</h1>
         </header>
         <div id="container">
             <input id="datePicker" type="date" value="2020-02-12">
